--- a/book/basics/concrete/material_characteristics_concrete.ipynb
+++ b/book/basics/concrete/material_characteristics_concrete.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "## Strenght and stiffness\n",
     "\n",
+    "```{table} Properties of concrete classes.\n",
+    ":name: concrete-class-properties\n",
     "| Material Property                             | C12/15 | C20/25 | C30/37 | C35/45 | C45/55 | C50/60 |\n",
     "|-----------------------------------------------|----------------|--------|--------|--------|--------|--------|\n",
     "| Density $ρ_{rep}$ (kg/m³)                          | 2500   | 2500   | 2500   | 2500   | 2500   | 2500   |\n",
@@ -19,7 +21,7 @@
     "| Characteristic Cube Strength $f_{ck;cube}$ (N/mm²) | 15             | 25     | 37     | 45     | 55     | 60     |\n",
     "| Mean Value Tensile Strength $f_{ctm}$ (N/mm²)      | 1.6            | 2.2    | 2.9    | 3.2    | 3.8    | 4.1    |\n",
     "| Characteristic Tensile Strength $f_{ctk;0,05}$ (N/mm²) | 1.1         | 1.5    | 2.0    | 2.2    | 2.7    | 2.9    |\n",
-    "\n",
+    "```\n",
     "\n",
     "## Strength\n",
     "\n",
