--- a/book/basics/concrete/material_characteristics_concrete_steel.ipynb
+++ b/book/basics/concrete/material_characteristics_concrete_steel.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "### Material properties (bars)\n",
     "\n",
+    "```{table} Material properties for reinforcement steel in concrete.\n",
+    ":name: reinforcement-steel-properties\n",
     "| Steel Grade         | Tensile Strength $( f_{t;k} )$ [N/mm²] | Yield Stress $( f_{y;k} )$ [N/mm²] | Strain at Maximum Load $\\varepsilon_{su}$ [‰] |\n",
     "|---------------------|-----------------------------------------|-------------------------------------|----------------------------------------------------|\n",
     "| FeB 400 HWL, HK     | 400                                     | 350                                 | 4.00                                               |\n",
@@ -20,9 +22,12 @@
     "\n",
     "### Material properties (nets)\n",
     "\n",
+    "```{table} Material properties reinforcement steel nets.\n",
+    ":name: reinforcement-steel-nets-properties\n",
     "| Steel Grade         | Tensile Strength $( f_{t;k} )$ [N/mm²] | Design value tensile strength $( f_{y;k} )$ [N/mm²] | Strain at Maximum Load $\\varepsilon_{su}$ [‰] |\n",
     "|----------------------------|-------------------------|--------------------------------------|------------------------------------------------|\n",
-    "| FeB 500 HKN, HWN           | 500                     | 435                                  | 2.175                                          |\n"
+    "| FeB 500 HKN, HWN           | 500                     | 435                                  | 2.175                                          |\n",
+    "```"
    ]
   },
   {
