--- a/book/basics/concrete/reinforcement.ipynb
+++ b/book/basics/concrete/reinforcement.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "## Reinforcement areas for beams and columns\n",
     "\n",
+    "```{table} Steel reinforcement areas.\n",
+    ":name: reinforcement-steel-areas\n",
     "|Diameter $\\phi$ [mm] |$A_s$ [mm^2] ||||||||||\n",
     "|---|------|------|------|------|------|------|------|------|------|------|\n",
     "|  | 1 bar    | 2 bars   | 3 bars   | 4 bars   | 5 bars   | 6 bars | 7 bars | 8 bars  | 9 bars  | 10 bars   |\n",
@@ -19,9 +21,11 @@
     "| 20| 314  | 628  | 942  | 1257 | 1571 | 1885 | 2199 | 2513 | 2827 | 3142 |\n",
     "| 25| 491  | 982  | 1473 | 1963 | 2454 | 2945 | 3436 | 3927 | 4418 | 4909 |\n",
     "| 32| 804  | 1608 | 2413 | 3217 | 4021 | 4825 | 5630 | 6434 | 7238 | 8042 |\n",
-    "\n",
+    "```\n",
     "\n",
     "## Reinforcement in nets for slabs\n",
+    "```{table} Reinforcement nets in slabs.\n",
+    ":name: reinforcement-nets-slabs\n",
     "| Spacing (c.t.c.) [m] | Bars/length [1/m]| Total area per meter width [mm²/m]|||||||\n",
     "|-----------------------|------------|--------------------------------------|---|---|---|---|---|---|\n",
     "| | | $\\phi = 6 [mm]$ | $\\phi = 8 [mm]$ | $\\phi = 10 [mm]$ | $\\phi = 12 [mm]$ | $\\phi = 16 [mm]$ | $\\phi = 20 [mm]$ | $\\phi = 25 [mm]$ |\n",
@@ -53,7 +57,7 @@
     "| 195                   | 5.13       | 145                                  | 258 | 403  | 580  | 1031 | 1612 | 2518 |\n",
     "| 200                   | 5.00       | 141                                  | 251 | 393  | 566  | 1005 | 1571 | 2454 |\n",
     "| 250                   | 4.00       | 113                                  | 201 | 314  | 452  | 804  | 1257 | 1964 |\n",
-    "\n",
+    "```\n",
     "\n",
     "`````{Note}\n",
     "In concrete plates (floors and walls) the reinforcement is usually specified as the the type of bar and the spacing (Ø12-200) rather than the number of bars per meter (5 Ø12)\n",
@@ -76,13 +80,15 @@
     "\n",
     "## Cover\n",
     "\n",
+    "```{table} Concrete cover per structural element.\n",
+    ":name: concrete-cover-structural-elements\n",
     "| Structural Element | Cover c [mm] per environment | |  | Increase [mm] | |\n",
     "|--------------------|--------------|---------------|-----------------------|---------------------------|-------------------|\n",
     "||dry|wet|salt or aggresive|modified surface|uninspected table surface|\n",
     "| Plaat en wand      | 15           | 25            | 30                    | +5                        | +5                |\n",
     "| Balk, poer en console | 25         | 30            | 35                    | +5                        | +5                |\n",
     "| Kolom              | 30           | 35            | 40                    | +5                        | +5                |\n",
-    "\n",
+    "```\n",
     "\n",
     "`````{Note}\n",
     "Further demands:  \n",
