--- a/book/basics/steel/castellated_beams.ipynb
+++ b/book/basics/steel/castellated_beams.ipynb
@@ -66,6 +66,8 @@
     "```\n",
     "\n",
     "#### Based on IPE180\n",
+    "```{table} IPE180 Steel properties.\n",
+    ":name: steel-ipe180-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 180* | 19.2   | 90   | 0    | 0    | 24     | 1317   | 146    | 83     | 24     | 1317   | 146    | 83     |\n",
@@ -74,6 +76,7 @@
     "| 300  | 19.2   | 30   | 240.1| 0    | 30     | 4254   | 284    | 165    | 18     | 3643   | 243    | 126    |\n",
     "| 370  | 20.6   | 45   | 280  | 100  | 34     | 6943   | 375    | 221    | 19     | 5973   | 323    | 169    |\n",
     "| 420  | 21.3   | 45   | 330  | 150  | 37     | 9370   | 446    | 265    | 19     | 7783   | 371    | 193    |\n",
+    "```\n",
     "\n",
     "```{admonition} Properties IPE180\n",
     "$h = 180 \\ mm$  \n",
@@ -86,6 +89,8 @@
     "```\n",
     "\n",
     "#### Based on IPE240\n",
+    "```{table} IPE140 Steel properties.\n",
+    ":name: steel-ipe140-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 240* | 31.3   | 120  | 0    | 0    | 39     | 3892   | 324    | 183    | 39     | 3892   | 324    | 183    |\n",
@@ -94,6 +99,7 @@
     "| 400  | 31.3   | 40   | 320.2| 0    | 49     | 12479  | 624    | 360    | 29     | 10783  | 539    | 280    |\n",
     "| 460  | 33     | 60   | 340  | 100  | 53     | 17241  | 750    | 436    | 32     | 15210  | 661    | 346    |\n",
     "| 510  | 33.8   | 60   | 390  | 150  | 56     | 21937  | 860    | 504    | 32     | 18872  | 740    | 386    |\n",
+    "```\n",
     "\n",
     "```{admonition} Properties IPE240\n",
     "$h = 240 \\ mm$  \n",
@@ -106,6 +112,8 @@
     "```\n",
     "\n",
     "#### Based on IPE300\n",
+    "```{table} IPE300 Steel properties.\n",
+    ":name: steel-ipe300-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 300* | 43     | 150  | 0    | 0    | 54     | 8356   | 557    | 314    | 54     | 8356   | 557    | 314    |\n",
@@ -114,7 +122,7 @@
     "| 500  | 43     | 50   | 400.2| 0    | 68     | 26790  | 1071   | 619    | 40     | 22998  | 920    | 477    |\n",
     "| 550  | 44.9   | 75   | 400  | 100  | 72     | 33398  | 1214   | 706    | 43     | 29611  | 1077   | 564    |\n",
     "| 600  | 45.8   | 75   | 450  | 150  | 75     | 40912  | 1364   | 798    | 43     | 35520  | 1184   | 618    |\n",
-    "\n",
+    "```\n",
     "\n",
     "```{admonition} Properties IPE300\n",
     "$h = 300 \\ mm$  \n",
@@ -127,6 +135,8 @@
     "```\n",
     "\n",
     "#### Based on IPE360\n",
+    "```{table} IPE360 Steel properties.\n",
+    ":name: steel-ipe360-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 360* | 58.2   | 180  | 0    | 0    | 73     | 16266  | 904    | 510    | 73     | 16266  | 904    | 510    |\n",
@@ -135,7 +145,7 @@
     "| 640  | 60.3   | 90   | 460  | 100  | 95     | 60520  | 1891   | 1097   | 58     | 54031  | 1688   | 885    |\n",
     "| 690  | 61.4   | 90   | 510  | 150  | 99     | 72094  | 2090   | 1218   | 58     | 63251  | 1833   | 958    |\n",
     "| 740  | 62.5   | 90   | 560  | 200  | 103    | 84907  | 2295   | 1345   | 58     | 73199  | 1978   | 1031   |\n",
-    "\n",
+    "```\n",
     "\n",
     "```{admonition} Properties IPE360\n",
     "$h = 360 \\ mm$  \n",
@@ -156,6 +166,8 @@
     "```\n",
     "\n",
     "#### Based on HEA180\n",
+    "```{table} HEA180 Steel properties.\n",
+    ":name: steel-hea180-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|------|------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 171* | 36.2   | 85.5 | 0    | 0    | 45     | 2510   | 294    | 162    | 45     | 2510   | 294    | 162    |\n",
@@ -164,6 +176,7 @@
     "| 285  | 36.2   | 28.5 | 228.1| 0    | 52     | 7761   | 545    | 301    | 38     | 7167   | 503    | 262    |\n",
     "| 357  | 37.8   | 42.8 | 271  | 100  | 56     | 12748  | 715    | 398    | 40     | 11753  | 659    | 343    |\n",
     "| 407  | 38.6   | 42.8 | 321  | 150  | 59     | 17088  | 841    | 470    | 40     | 15434  | 759    | 393    |\n",
+    "```\n",
     "\n",
     "```{admonition} Properties HEA180\n",
     "$h = 171 \\ mm$  \n",
@@ -176,6 +189,8 @@
     "```\n",
     "\n",
     "#### Based on HEA240\n",
+    "```{table} HEA240 Steel properties.\n",
+    ":name: steel-hea240-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|------|-------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 230* | 61.5   | 115  | 0     | 0    | 77     | 7763   | 675    | 372    | 77     | 7763   | 675    | 372    |\n",
@@ -184,6 +199,7 @@
     "| 385  | 61.5   | 37.5 | 310   | 0    | 88     | 24155  | 1255   | 693    | 65     | 22292  | 1158   | 603    |\n",
     "| 445  | 63.5   | 57.5 | 330   | 100  | 93     | 33273  | 1495   | 829    | 68     | 31027  | 1394   | 727    |\n",
     "| 495  | 64.5   | 57.5 | 380   | 150  | 97     | 42148  | 1703   | 947    | 68     | 38719  | 1564   | 812    |\n",
+    "```\n",
     "\n",
     "```{admonition} Properties HEA240\n",
     "$h = 230 \\ mm$  \n",
@@ -196,6 +212,8 @@
     "```\n",
     "\n",
     "#### Based on HEA300\n",
+    "```{table} HEA300 Steel properties.\n",
+    ":name: steel-hea300-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|-------|-------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 310* | 99.5   | 155   | 0     | 0    | 124    | 22929  | 1479   | 814    | 124    | 22929  | 1479   | 814    |\n",
@@ -216,6 +234,8 @@
     "```\n",
     "\n",
     "#### Based on HEA360\n",
+    "```{table} HEA360 Steel properties.\n",
+    ":name: steel-hea360-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|-------|-------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 350* | 114.2  | 175   | 0     | 0    | 143    | 33090  | 1891   | 1044   | 143    | 33090  | 1891   | 1044   |\n",
@@ -224,6 +244,7 @@
     "| 585  | 114.2  | 57.4  | 470.4 | 0    | 166    | 103038 | 3521   | 1953   | 119    | 94364  | 3225   | 1676   |\n",
     "| 625  | 116.9  | 87.5  | 450   | 100  | 170    | 119246 | 3816   | 2120   | 125    | 111652 | 3573   | 1867   |\n",
     "| 675  | 118.2  | 87.5  | 500   | 150  | 175    | 141523 | 4193   | 2336   | 125    | 131106 | 3885   | 2024   |\n",
+    "```\n",
     "\n",
     "```{admonition} Properties HEA360\n",
     "$h = 350 \\ mm$  \n",
@@ -236,6 +257,8 @@
     "```\n",
     "\n",
     "#### Based on HEA400\n",
+    "```{table} HEA400 Steel properties.\n",
+    ":name: steel-hea400-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $h_1 \\ [mm]$ | $h_2 \\ [mm]$ | $h_3 \\ [mm]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $S_y \\cdot 10^3 \\ [mm^3]$ | $A_s \\cdot 10^2 \\ [mm^2]$ | $I_z [mm^4]$ | $W_z \\cdot 10^3 [mm^3]$ | $S_z \\cdot 10^3 [mm^3]$ |\n",
     "|------|--------|--------|--------|------|--------|--------|--------|--------|--------|--------|--------|--------|\n",
     "| 440* | 142.4  | 220    | 0      | 0    | 178    | 63722  | 2896   | 1608   | 178    | 63722  | 2896   | 1608   |\n",
@@ -244,6 +267,7 @@
     "| 735  | 142.4  | 72.4   | 590.5  | 0    | 212    | 199928 | 5438   | 3047   | 144    | 180198 | 4902   | 2546   |\n",
     "| 760  | 145.5  | 110    | 540    | 100  | 215    | 215345 | 5667   | 3179   | 153    | 200255 | 5270   | 2760   |\n",
     "| 810  | 147    | 110    | 590    | 150  | 221    | 248493 | 6136   | 3451   | 153    | 228811 | 5650   | 2951   |\n",
+    "```\n",
     "\n",
     "```{admonition} Properties HEA400\n",
     "$h = 390 \\ mm$  \n",
