--- a/book/basics/steel/explanation_cross_sectional_quantities.ipynb
+++ b/book/basics/steel/explanation_cross_sectional_quantities.ipynb
@@ -21,13 +21,15 @@
     "y-axis: cross product of x and z axis  \n",
     "z-axis: downward axis\n",
     "\n",
+    "```{table} Notation of different steel properties.\n",
+    ":name: steel-properties-notation\n",
     "| Name                                       | Structural Mechanics  | NEN-EN 1993                                      |\n",
     "|--------------------------------------------|------------------------- | ----------------------------------------------|\n",
     "| Moment of inertia around y-axis (Resistance against moments in x-z plane) | $I_{zz}$ | $I_{y}$ |\n",
     "| Moment of inertia around z-axis (Resistance against moments in x-y plane ) | $I_{yy}$ | $I_{z}$ |\n",
     "| Section modulus around y-axis (Resistance against moments in x-z plane) | $W_{zz}$ | $W_{y}$ |\n",
     "| Section modulus around z-axis (Resistance against moments in x-y plane) | $W_{yy}$ | $W_{z}$ |\n",
-    "\n",
+    "```\n",
     "\n",
     "## Top hat beams\n",
     "```{figure} Images/radius_of_gyration.png\n",
