--- a/book/basics/steel/integrated_beams.ipynb
+++ b/book/basics/steel/integrated_beams.ipynb
@@ -89,6 +89,8 @@
     "```\n",
     "The tables depicted below are a selection of the available sections [^1].\n",
     "\n",
+    "```{table} Steel sections and properties.\n",
+    ":name: steel-sections-properties\n",
     "| $h \\ [mm]$ | profile type | $G \\ [kg/m]$ | $b_u \\  [mm]$ | $t \\ [mm]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 \\ [mm^3]$ | $W_{y;pl} \\cdot 10^4 \\ [mm^3]$ | $M_{y;u} \\ [kNm]$ | $V_{z;u} \\ [kN]$ |\n",
     "|--------|--------------|------|-----------|----------|-----------|-----------|-------|------|------|\n",
     "| 180 | HE180B | 84.2 | 400 | 10 | 6073 | 482 | 599 | 213 | 527 |\n",
@@ -100,6 +102,7 @@
     "| 270 | HE240M | 202.9 | 450 | 12 | 32746 | 1985 | 2513 | 892 | 1626 |\n",
     "| 270 | HE240M | 213.7 | 450 | 15 | 34546 | 2020 | 2569 | 912 | 1626 |\n",
     "| 270 | HE240M | 231.7 | 450 | 20 | 37362 | 2076 | 2664 | 946 | 1626 |\n",
+    "```\n",
     "\n",
     "### IFB beams\n",
     "\n",
@@ -110,6 +113,8 @@
     "```\n",
     "The tables depicted below are a selection of the available sections [^1].\n",
     "\n",
+    "```{table} IFB beams and properties.\n",
+    ":name: ifb-beams-properties\n",
     "| $h \\ [mm]$ | profile type | $G \\ [kg/m]$ | $b_u \\  [mm]$ | $b_u \\  [mm]$ |$t \\ [mm]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 \\ [mm^3]$ | $W_{y;pl} \\cdot 10^4 \\ [mm^3]$ | $M_{y;u} \\ [kNm]$ | $V_{z;u} \\ [kN]$ |\n",
     "|--------|--------------|------|-----------|----|---------|---------|-------------|-------|------|------|\n",
     "| 145 | HE300A | 85.2 | 300 | 500 | 10 | 4976 | 607 | 704 | 215 | 250 |\n",
@@ -129,7 +134,7 @@
     "| 395 | HE800A | 174.4 | 300 | 500 | 15 | 67206 | 3170 | 3635 | 1290 | 1640 |\n",
     "| 400 | HE800B | 213.6 | 300 | 500 | 20 | 85488 | 4032 | 4574 | 1624 | 1919 |\n",
     "| 400 | HE800M | 261.6 | 300 | 500 | 25 | 104241 | 4804 | 5581 | 1981 | 2290 |\n",
-    "\n",
+    "```\n",
     "\n",
     "### THQ hoed liggers\n",
     "\n",
@@ -140,6 +145,8 @@
     "```\n",
     "The tables depicted below are a selection of the available sections [^1].\n",
     "\n",
+    "```{table} THQ beams and properties.\n",
+    ":name: thq-beams-properties\n",
     "| $h \\ [mm]$ | $G \\ [kg/m]$ | $t_w \\ [mm]$ | $b_0 \\ [mm]$ | $t_0 \\ [mm]$ | $b_u \\ [mm]$ | $t_u \\ [mm]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 \\ [mm^3]$ | $W_{y;pl} \\cdot 10^4 \\ [mm^3]$ | $M_{y;u} \\ [kNm]$ | $V_{z;u} \\ [kN]$ |\n",
     "|---|----|---|---|----|---|----|---|---|---|--------|--------|\n",
     "| 150 | 55.8 | 5 | 190 | 12 | 400 | 8 | 3238 | 364 | 445 | 158 | 308 |\n",
@@ -159,7 +166,8 @@
     "| 320 | 135.4 | 8 | 290 | 20 | 500 | 12 | 33885 | 2029 | 2275 | 808 | 1050 |\n",
     "| 400 | 150.0 | 10 | 190 | 25 | 400 | 15 | 52566 | 2400 | 2916 | 1035 | 1640 |\n",
     "| 400 | 166.0 | 10 | 240 | 25 | 450 | 15 | 60501 | 2840 | 3319 | 1178 | 1640 |\n",
-    "| 400 | 182.0 | 10 | 290 | 25 | 500 | 15 | 68329 | 3269 | 3715 | 1319 | 1640 |"
+    "| 400 | 182.0 | 10 | 290 | 25 | 500 | 15 | 68329 | 3269 | 3715 | 1319 | 1640 |\n",
+    "```"
    ]
   },
   {
