--- a/book/basics/steel/material_characteristics_steel.ipynb
+++ b/book/basics/steel/material_characteristics_steel.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "## Strength and stiffness\n",
     "\n",
+    "```{table} Different steels and their properties.\n",
+    ":name: steel-properties\n",
     "| Property                                | S235  | S275  | S355  | S420  | S460  |\n",
     "|-----------------------------------------|-------|-------|-------|-------|-------|\n",
     "| Density $ρ_k$ [kg/m³]                     | 7850  | 7850  | 7850  | 7850  | 7850  |\n",
@@ -19,7 +21,7 @@
     "| Yield Strain $ε_{y;d}$ [‰]                  | 1.12  | 1.31  | 1.69  | --    | --    |\n",
     "| Shear Modulus $G_k$ [N/mm²]               | 8.1 × 10⁴ | 8.1 × 10⁴ | 8.1 × 10⁴ | 8.1 × 10⁴ | 8.1 × 10⁴ |\n",
     "| Coefficient of Thermal Expansion $α$ [K⁻¹] | 12 × 10⁻⁶ | 12 × 10⁻⁶ | 12 × 10⁻⁶ | 12 × 10⁻⁶ | 12 × 10⁻⁶ |\n",
-    "\n",
+    "```\n",
     "\n",
     "Higher steel grades are also available (up to S1100). The design rules stated in EC3 and this section only apply for the mentioned steel grades. The given values are only applicable to plates, flanges, etc with a maximum thickness of 40 mm acciording to NEN-EN 10025.\n",
     "\n",
