--- a/book/basics/steel/products_1_hot_rolled_sections.ipynb
+++ b/book/basics/steel/products_1_hot_rolled_sections.ipynb
@@ -23,10 +23,13 @@
     "Connection between beam (I-section) and column (H-section) by means of an elongated endplate.\n",
     "```\n",
     "\n",
+    "```{table} Dimensions of I-sections.\n",
+    ":name: dimensions-i-sections\n",
     "| Type | Size | $h$ (mm) | $b$ (mm) | $M_{y;el;d}$ S235 (kNm) | $M_{y;el;d}$ S355 (kNm) |\n",
     "|------|------|--------|--------|---------------------|---------------------|\n",
     "| IPE  | 80 - 600 | 80 - 600 | 42 - 300 | 4,56 - 1076 | 6,89 - 1627 |\n",
     "| INP  | 80 - 750 | 80 - 750 | 46 - 263 | 4,71 - 1467 | 7,71 - 2216 |\n",
+    "```\n",
     "\n",
     "Applications: Light structures in residential and non-residential buildings. Used a lot in industrial buildings. It is also possible to use the I sections to make castellated beams [^1].\n",
     "\n",
@@ -49,12 +52,14 @@
     "HE-A column support\n",
     "```\n",
     "\n",
+    "```{table} Dimensions of H-sections.\n",
+    ":name: dimensions-h-sections\n",
     "| Type | Size | $h$ (mm) | $b$ (mm) | $M_{z;el;d}$ S235 (kNm) | $M_{z;el;d}$ S355 (kNm) |\n",
     "|------|------|--------|--------|--------------------|--------------------|\n",
     "| HE A | 100 - 1000 | 96 - 990 | 100 - 300 | 17,1 - 2629 | 25,8 - 3972 |\n",
     "| HE B | 100 - 1000 | 100 - 1000 | 100 - 300 | 21,1 - 3030 | 31,9 – 4578 |\n",
     "| HE M | 100 - 1000 | 120 – 1008 | 106 - 302 | 44,8 - 3368 | 67,6 – 5088 |\n",
-    "\n",
+    "```\n",
     "\n",
     "Applications: H-sections are useful for compression elements (columns) or beams where the structural height has to be limited. The increase in section modulus is achieved by using thicker flanges. Due to their large width the H-sections retain their shape relatively well [^1].\n",
     "\n",
@@ -65,11 +70,13 @@
     "UAP and UNP sections\n",
     "```\n",
     "\n",
+    "```{table} Dimensions of U-sections.\n",
+    ":name: dimensions-u-sections\n",
     "| Type | Size | $h$ (mm) | $b$ (mm) | $M_{z;el;d}$ S235 (kNm) | $M_{z;el;d}$ S355 (kNm) |\n",
     "|------|------|--------|--------|--------------------|--------------------|\n",
     "| UAP  | 80 - 400 | 80 - 400 | 45 - 100 | 6,29 - 128 | 9,51 - 193 |\n",
     "| UNP  | 80 - 400 | 80 - 400 | 45 - 100 | 6,22 - 239 | 9,4 - 361 |\n",
-    "\n",
+    "```\n",
     "\n",
     "Applications: Floor edges and landings. Connections between UNP-sections can be complicated due to the inclined edges.U-profiles are not symmetrical, causing the sections to bend along both axes when loaded vertically [^1].\n",
     "\n",
@@ -93,11 +100,13 @@
     "trusses rather than on top of them [^1].\n",
     "```\n",
     "\n",
+    "```{table} Dimensions of hollow sections.\n",
+    ":name: dimensions-hollow-sections\n",
     "| Type | Size | $h$ (mm) | $t$ (mm) |\n",
     "|------|------|--------|--------|\n",
     "| CHS  | 42,4 - 610 | 42,4 - 610 | 2,6 - 30 |\n",
     "| RHS  | 40 - 400 | 40 - 400 | 3 - 16 |\n",
-    "\n",
+    "```\n",
     "\n",
     "Application: (3D)trusses, columns.\n",
     "\n",
