--- a/book/basics/steel/section_tables.ipynb
+++ b/book/basics/steel/section_tables.ipynb
@@ -13,6 +13,8 @@
     "IPE axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions IPE sections (100-300).\n",
+    ":name: dimensions-ipe-sections-100-300\n",
     "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|--------------|--------------|\n",
     "| IPE 100A   | 6.9    | 98.0   | 55.0   | 3.60     | 4.70     | 8.78    | 141      | 13.1     | 28.8    | 4.77    | 40.1         | 12.2         |\n",
@@ -49,6 +51,7 @@
     "| IPE 300    | 42.2   | 300.0  | 150.0  | 7.10     | 10.7     | 53.8    | 8356     | 604      | 557     | 80.5    | 92.9      | 125.0     |\n",
     "| IPE 300O   | 49.3   | 304.0  | 152.0  | 8.00     | 12.7     | 62.8    | 9994     | 746      | 658     | 98.1    |           | 126.0     |\n",
     "| IPE 300 R  | 51.7   | 306.0  | 147.0  | 8.50     | 13.7     | 65.9    | 10500    | 728      | 686     | 99.0    |           | 126.0     |\n",
+    "```\n",
     "\n",
     "## IPE sections (IPE 330 - IPE 750)\n",
     "```{figure} Images/IPE.png\n",
@@ -57,6 +60,8 @@
     "IPE axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions IPE sections (330-750).\n",
+    ":name: dimensions-ipe-sections-330-750\n",
     "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
     "| IPE 330 A  | 43.0   | 327.0  | 160.0  | 6.50     | 10.0     | 54.7    | 10230    | 685      | 626     | 85.6    |137.0| 35.4|\n",
@@ -97,7 +102,7 @@
     "| IPE 750 x 161 | 160.5 | 758.0 | 266.0 | 13.8    | 19.3     | 204     | 186100   | 6073     | 4909    | 457     | 302.0        | 54.5         |\n",
     "| IPE 750 x 174 | 173.7 | 762.0 | 267.0 | 14.4    | 21.6     | 221     | 205800   | 6873     | 5402    | 515     | 305.0        | 55.7         |\n",
     "| IPE 750 x 185 | 185.0 | 766.0 | 267.0 | 14.9    | 23.6     | 236     | 223000   | 7510     | 5821    | 563     | 308.0        | 56.5         |\n",
-    "\n",
+    "```\n",
     "\n",
     "\n",
     "## HEA/HEB/HEM sections (HEA 100 - HEA 340)\n",
@@ -107,6 +112,8 @@
     "HEA/HEB/HEM axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions HEA sections (100-340).\n",
+    ":name: dimensions-hea-sections-100-340\n",
     "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
     "| HE 100 AA | 12.2   | 91.0   | 100.0  | 4.20     | 5.50     | 15.6    | 237      | 92.1     | 52.0    | 18.4    | 38.9     | 24.3     |\n",
@@ -159,6 +166,7 @@
     "| HE 340 A  | 104.8  | 330.0  | 300.0  | 9.50     | 16.5     | 133     | 27690    | 7436     | 1678    | 496     | 144.0       | 74.6        |\n",
     "| HE 340 B  | 134.2  | 340.0  | 300.0  | 12.0     | 21.5     | 171     | 36660    | 9690     | 2156    | 646     | 146.0       | 75.3        |\n",
     "| HE 340 M  | 247.9  | 377.0  | 309.0  | 21.0     | 40.0     | 316     | 76370    | 19710    | 4052    | 1276    | 156.0       | 79.0        |\n",
+    "```\n",
     "\n",
     "## HEA/HEB/HEM sections (HEA 360 - HEA 1000)\n",
     "```{figure} Images/HEA_HEB_HEM.png\n",
@@ -167,6 +175,8 @@
     "HEA/HEB/HEM axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions HEA sections (360-1000).\n",
+    ":name: dimensions-hea-sections-360-1000\n",
     "| Profile | $G \\ [kg/m]$ | $h \\ [mm]$ | $b \\ [mm]$ | $t_w \\ [mm]$ | $t_f \\ [mm]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|------------|--------|--------|--------|----------|----------|---------|----------|----------|---------|---------|-----|-----|\n",
     "| HE 360 AA  | 83.7   | 339.0  | 300.0  | 9.00     | 12.0     | 107     | 23040    | 5410     | 1359    | 361     | 147.0       | 71.2        |\n",
@@ -219,8 +229,7 @@
     "| HE 1000 | A | 272.3 | 990.0 | 300.0 | 16.5 | 31.0 | 347 | 553800 | 14000 | 11190 | 934 | 400.0 | 63.5 |\n",
     "| HE 1000 | B | 314.0 | 1000.0 | 300.0 | 19.0 | 36.0 | 400 | 644700 | 16280 | 12890 | 1085 | 401.0 | 63.8 |\n",
     "| HE 1000 | M | 348.7 | 1008.0 | 302.0 | 21.0 | 40.0 | 444 | 722300 | 18460 | 14330 | 1222 | 403.0 | 64.5 |\n",
-    "\n",
-    "\n",
+    "```\n",
     "\n",
     "## CHS hollow sections (hot rolled)\n",
     "```{figure} Images/CHS.png\n",
@@ -229,6 +238,8 @@
     "CHS axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions CHS sections.\n",
+    ":name: dimensions-chs-sections\n",
     "| $D \\ [mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
     "|---------|------|--------|-------|-------|-------|------|\n",
     "| 26.9          | 3.2    | 1.87    | 2.38     | 1.70     | 1.27      | 8.5       |\n",
@@ -293,6 +304,7 @@
     "|               | 12.5   | 153     | 195      | 59800    | 2350      | 175.0     |\n",
     "|               | 16.0   | 194     | 247      | 74900    | 2950      | 174.0     |\n",
     "|               | 20.0   | 241     | 307      | 91400    | 3600      | 173.0     |\n",
+    "```\n",
     "\n",
     "## RHS hollow sections 40 x 40 tot 180 x 180 (hot rolled, square)\n",
     "```{figure} Images/RHS.png\n",
@@ -301,6 +313,8 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions RHS hollow sections.\n",
+    ":name: dimensions-rhs-sections-hollow-1\n",
     "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
     "|---------|------|--------|-------|-------|-------|------|\n",
     "| 40x40   | 3.0    | 3.41    | 4.34     | 9.78     | 4.89      | 15.0      |\n",
@@ -363,7 +377,7 @@
     "|          | 10.0   | 52.5    | 66.9     | 3190     | 355       | 69.1      |\n",
     "|          | 12.5   | 64.4    | 82.1     | 3790     | 421       | 68.0      |\n",
     "|          | 16.0   | 80.2    | 102      | 4500     | 500       | 66.4      |\n",
-    "\n",
+    "```\n",
     "\n",
     "## RHS hollow sections 200 x 200 - 400 x 400 (continued)\n",
     "```{figure} Images/RHS.png\n",
@@ -372,6 +386,8 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions RHS  hollow sections.\n",
+    ":name: dimensions-rhs-sections-hollow-2\n",
     "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y = I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} = W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y = i_z \\ [mm]$ |\n",
     "|---------|------|--------|-------|-------|-------|------|\n",
     "| 200x200 | 5.0  | 30.4   | 38.7  | 2450  | 245   | 79.5 |\n",
@@ -398,7 +414,7 @@
     "|         | 12.5 | 151    | 192   | 47800 | 2390  | 158.0|\n",
     "|         | 16.0 | 191    | 243   | 59300 | 2970  | 156.0|\n",
     "|         | 20.0 | 235    | 300   | 71500 | 3580  | 154.0|\n",
-    "\n",
+    "```\n",
     "\n",
     "## RHS hollow sections 50 x 30 - 100 x 60 (hot rolled, non-square)\n",
     "```{figure} Images/RHS.png\n",
@@ -407,6 +423,8 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions RHS hollow sections, hot-rolled, non-square.\n",
+    ":name: dimensions-rhs-sections-hot-rolled-non-square\n",
     "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|-------|--------|--------|-------|---------|---------|----------|----------|-----------|-----------|\n",
     "| 50x30 | 3.2    | 3.61   | 4.13  | 14.2    | 6.20    | 5.68     | 4.13     | 17.6      | 11.6      |\n",
@@ -431,9 +449,9 @@
     "|       | 5.0    | 11.6   | 27.9  | 189     | 83.6    | 37.8     | 27.9     | 35.8      | 23.8      |\n",
     "|       | 6.3    | 14.2   | 32.7  | 225     | 98.1    | 45.0     | 32.7     | 35.2      | 23.3      |\n",
     "|       | 8.0    | 17.5   | 37.8  | 264     | 113     | 52.8     | 37.8     | 34.4      | 22.5      |\n",
+    "```\n",
     "\n",
     "## RHS hollow sections 120 x 60 tot 500 x 300 (continued)\n",
-    "\n",
     "\n",
     "```{figure} Images/RHS.png\n",
     "---\n",
@@ -441,6 +459,8 @@
     "RHS axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions RHS hollow sections.\n",
+    ":name: dimensions-rhs-sections-hollow-3\n",
     "| $b$ x $h$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $G \\ [kg/m]$ | $A_{tot} \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$ | $I_z \\cdot 10^4 \\ [mm^4]$ | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ | $i_y \\ [mm]$ | $i_z \\ [mm]$ |\n",
     "|---------|--------|--------|-------|---------|---------|----------|----------|-----------|-----------|\n",
     "| 120x60  | 3.6    | 9.70   | 12.3  | 227     | 76.3    | 37.9     | 25.4     | 43.0      | 24.9      |\n",
@@ -500,8 +520,7 @@
     "|         | 12.5   | 151    | 192  | 65800   | 29800   | 2630     | 1990     | 185.0       | 125.0       |\n",
     "|         | 16.0   | 191    | 243  | 81800   | 36800   | 3270     | 2450      | 183.0       | 123.0       |\n",
     "|         | 20.0   | 235    | 300  | 98800   | 44100   | 3950     | 2940       | 182.0       | 121.0       |\n",
-    "\n",
-    "\n",
+    "```\n",
     "\n",
     "## UNP sections\n",
     "```{figure} Images/UNP.png\n",
@@ -510,6 +529,8 @@
     "UNP axes\n",
     "```\n",
     "\n",
+    "```{table} Dimensions UNP sections.\n",
+    ":name: dimensions-unp-sections\n",
     "| $h$ x $b$ $[mm \\ x \\ mm]$ | $t \\ [mm]$ | $S_s \\ [mm]$ | $G \\ [kg/m]$ | $A_s \\cdot 10^2 \\ [mm²]$ | $I_y \\cdot 10^4 \\ [mm^4]$   | $I_z \\cdot 10^4 \\ [mm^4]$  | $W_{y;el} \\cdot 10^3 \\ [mm^3]$ | $W_{z;el} \\cdot 10^3 \\ [mm^3]$ |\n",
     "|----------|--------|-------|-------|-----------|---------|----------|----------|------------|\n",
     "| 80x45    | 6      | 19.4  | 8.7   | 11.0      | 105.9   | 19.36    | 26.5     | 6.36       |\n",
@@ -528,8 +549,11 @@
     "| 350x100  | 14     | 40.7  | 60.6  | 77.3      | 12840   | 570.9    | 734      | 75         |\n",
     "| 380x102  | 13.5   | 40.3  | 63.1  | 80.4      | 15760   | 615.2    | 829      | 78.7       |\n",
     "| 400x110  | 14     | 44.1  | 71.8  | 91.5      | 20350   | 851.0    | 1020     | 102        |\n",
+    "```\n",
     "\n",
     "## Corrugated sheet-sections\n",
+    "```{table} Corrugated sheet-sections.\n",
+    ":name: corrugated-sheet-sections\n",
     "| Shape | $h \\ [mm]$ | $t \\ [mm]$ | $\\sigma \\ [N/mm^2]$ | $I_y \\ [mm^4]$ | $W_{y;el} \\cdot 10^4 [mm^4]$ |\n",
     "|-----|-------|------------|------|--------------|------|\n",
     "| ![css_40](Images/css_40.png) | 40    | 0.88       | 94   | 30     | 9.1   |\n",
@@ -542,7 +566,7 @@
     "| |       | 1.00       | 130  | 243    | 31.8  |\n",
     "| ![css_120](Images/css_120.png) | 120   | 0.88       | 136  | 320    | 43.0  |\n",
     "| |       | 1.00       | 154  | 365    | 55.0  |\n",
-    "\n",
+    "```\n",
     "\n",
     "```{Note}\n",
     "The sections have variable width. Section moduli and moments of inertia are given per meter width\n",
