--- a/book/basics/timber/section_tables.ipynb
+++ b/book/basics/timber/section_tables.ipynb
@@ -19,6 +19,8 @@
     "```\n",
     "\n",
     "### Width 33 mm\n",
+    "```{table} Section tables for timber beams with width 33 mm.\n",
+    ":name: sawn-timber-33-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
     "| 69  | 2.20      | 26.1      | 0.90       | 12.5      | 0.21       |\n",
@@ -30,9 +32,11 @@
     "| 195 | 6.40      | 209.1     | 20.39      | 35.3      | 0.58       |\n",
     "| 220 | 7.20      | 266.2     | 29.28      | 39.9      | 0.66       |\n",
     "| 245 | 14.20     | 580.2     | 71.07      | 137.3     | 3.98       |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Width 45 mm\n",
+    "```{table} Section tables for timber beams with width 45 mm.\n",
+    ":name: sawn-timber-45-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
     "| 69 | 3.10 | 35.7 | 1.23 | 23.2 | 0.52 |\n",
@@ -43,8 +47,11 @@
     "| 170 | 7.60 | 216.7 | 18.42 | 57.3 | 1.29 |\n",
     "| 195 | 8.70 | 285.1 | 27.80 | 65.8 | 1.48 |\n",
     "| 220 | 9.90 | 363.0 | 39.93 | 74.2 | 1.67 |\n",
+    "```\n",
     "\n",
     "### Width 58 mm\n",
+    "```{table} Section tables for timber beams with width 58 mm.\n",
+    ":name: sawn-timber-58-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
     "| 95 | 5.50 | 87.2 | 4.14 | 53.2 | 1.54 |\n",
@@ -55,9 +62,11 @@
     "| 195 | 11.30 | 367.5 | 35.83 | 109.3 | 3.17 |\n",
     "| 220 | 12.70 | 467.8 | 51.46 | 123.3 | 3.58 |\n",
     "| 245 | 14.20 | 580.2 | 71.07 | 137.3 | 3.98 |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Width 69 mm\n",
+    "```{table} Section tables for timber beams with width 69 mm.\n",
+    ":name: sawn-timber-69-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
     "| 95 | 6.60 | 105.2 | 5.00 | 77.5 | 2.72 |\n",
@@ -69,24 +78,29 @@
     "| 220 | 15.40 | 564.6 | 62.11 | 179.6 | 6.29 |\n",
     "| 245 | 17.10 | 700.2 | 85.78 | 200.0 | 7.00 |\n",
     "| 270 | 18.90 | 850.5 | 114.8 | 220.5 | 7.72 |\n",
+    "```\n",
     "\n",
     "### Width 95 mm\n",
+    "```{table} Section tables for timber beams with width 95 mm.\n",
+    ":name: sawn-timber-95-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
     "| 195 | 18.50 | 602.0 | 58.70 | 293.3 | 13.93 |\n",
     "| 220 | 20.90 | 766.3 | 84.29 | 330.9 | 15.72 |\n",
     "| 245 | 23.20 | 950.3 | 116.4 | 368.5 | 17.50 |\n",
     "| 270 | 25.60 | 1154  | 155.8 | 406.1 | 19.29 |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Width 120 mm\n",
+    "```{table} Section tables for timber beams with width 120 mm.\n",
+    ":name: sawn-timber-120-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ | $W_z \\cdot 10^3 \\ [mm^3]$ | $I_z \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|-----------|------------|\n",
     "| 195 | 23.40 | 760.5 | 74.14 | 468.0 | 28.08 |\n",
     "| 220 | 26.40 | 968.0 | 106.5 | 528.0 | 31.68 |\n",
     "| 245 | 29.40 | 1201  | 147.1 | 588.0 | 35.28 |\n",
     "| 270 | 32.40 | 1458  | 196.8 | 648.0 | 38.88 |\n",
-    "\n",
+    "```\n",
     "\n",
     "## Glued laminated timber\n",
     "\n",
@@ -101,6 +115,8 @@
     "```\n",
     "\n",
     "### Width 55 mm\n",
+    "```{table} Section tables for timber beams with width 55 mm.\n",
+    ":name: sawn-timber-55-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200 | 11.0      | 0.36      | 36.6       |\n",
@@ -113,6 +129,8 @@
     "| 550 | 30.2      | 2.77      | 762.5      |\n",
     "\n",
     "### Width 85 mm\n",
+    "```{table} Section tables for timber beams with width 85 mm.\n",
+    ":name: sawn-timber-85-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200  | 17.0 | 0.56 | 56.6  |\n",
@@ -129,8 +147,11 @@
     "| 750 | 63.7 | 7.96 | 2988.2 |\n",
     "| 800 | 68.0 | 9.06 | 3626.6 |\n",
     "| 850 | 72.2 | 10.23 | 4350.0 |\n",
+    "```\n",
     "\n",
     "### Width 110 mm\n",
+    "```{table} Section tables for timber beams with width 110 mm.\n",
+    ":name: sawn-timber-110-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200 | 22.0 | 0.73 | 73.3 |\n",
@@ -153,8 +174,11 @@
     "| 750  | 82.5 | 10.31| 3867.1|\n",
     "| 800  | 88.0 | 11.73| 4693.3|\n",
     "| 850  | 93.5 | 13.24| 5629.4|\n",
+    "```\n",
     "\n",
     "### Width 135 mm\n",
+    "```{table} Section tables for timber beams with width 135 mm.\n",
+    ":name: sawn-timber-135-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200  | 27.0      | 0.90      | 90.0       |\n",
@@ -181,9 +205,11 @@
     "| 1250 | 168.7     | 35.15     | 21972.6    |\n",
     "| 1300 | 175.5     | 38.02     | 24716.2    |\n",
     "| 1350 | 182.2     | 41.00     | 27679.2    |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Width 160 mm\n",
+    "```{table} Section tables for timber beams with width 85 mm.\n",
+    ":name: sawn-timber-160-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200  | 32.0       | 1.06       | 106.6      |\n",
@@ -215,9 +241,11 @@
     "| 1500 | 240.0 | 60.00 | 45000.0 |\n",
     "| 1550 | 248.0 | 64.06 | 49651.6 |\n",
     "| 1600 | 256.0 | 68.26 | 54613.3 |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Width 185 mm\n",
+    "```{table} Section tables for timber beams with width 185 mm.\n",
+    ":name: sawn-timber-185-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200   | 37.0  | 1.23  | 123.3 |\n",
@@ -253,8 +281,11 @@
     "| 1700 | 314.5 | 89.10 | 75742.0 |\n",
     "| 1750 | 323.7 | 94.42 | 82623.6 |\n",
     "| 1800 | 333.0 | 99.90 | 89910.0 |\n",
+    "```\n",
     "\n",
     "### Width 205 mm\n",
+    "```{table} Section tables for timber beams with width 205 mm.\n",
+    ":name: sawn-timber-205-width\n",
     "| $h \\ [mm]$ | $A \\cdot 10^3 \\ [mm^2]$ | $W_y \\cdot 10^3 \\ [mm^3]$ | $I_y \\cdot 10^6 \\ [mm^4]$ |\n",
     "|-----|-----------|-----------|------------|\n",
     "| 200  | 41.0 | 1.36 | 136.6 |\n",
@@ -289,7 +320,8 @@
     "| 1650 | 338.2 | 93.01 | 76740.4 |\n",
     "| 1700 | 348.5 | 98.74 | 83930.4 |\n",
     "| 1750 | 358.7 | 104.63 | 91555.9 |\n",
-    "| 1800 | 369.0 | 110.70 | 99630.0 |\n"
+    "| 1800 | 369.0 | 110.70 | 99630.0 |\n",
+    "```"
    ]
   },
   {
