--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -68,10 +68,12 @@
     "\n",
     "The values for strength and modulus of elasticity can be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
     "\n",
+    "```{table} Ecample organisation of beam data.\n",
+    ":name: example-organisation-beam-data\n",
     "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Strength $f_{cd} \\ [N/mm²]$ | Youngs modulus $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
     "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C30/37 |         20 × 10³ |       33 × 10³ |\n",
-    "\n",
+    "```\n",
     "````"
    ]
   },
