--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -52,11 +52,14 @@
     "\n",
     "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
     "\n",
+    "```{table} Summary of different loads.\n",
+    ":name: summary-column-loads\n",
     "|                    | Opgelegde belasting | Opgelegde belasting | Rustende belasting | Rustende belasting | Gewicht ligger  | Gewicht ligger |\n",
     "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|\n",
     "|                    | vloer               | dak                 | vloer              | dak                | vloer           | dak            |\n",
     "|                    | [kN/m^2]            | [kN/m^2]            | [kN/m^2]           | [kN/m^2]           | [kN/m]          | [kN/m]         |\n",
     "|   betonskelet      | 3                   | 1                   | 4.9                | 4.9                | 4.5             | 4.5            |\n",
+    "```\n",
     "\n",
     "````{margin}\n",
     "**Estimation of structural dimensions, global sizing**\n",
@@ -71,9 +74,12 @@
     "\n",
     "We can calculate the values for A and I using the mechanics formulas for cross-sections.\n",
     "\n",
+    "```{table} OVerview of column properties.\n",
+    ":name: column-properties\n",
     "| $b_{kolom}$ [mm] | Profile [mm^2] | Weight [N/mm]| A    [mm^2]   | $\\mathsf{I_z}$  [mm^4]     | Strength class | Strength [N/mm^2] | Modulus of Elasticity [N/mm^2] |\n",
     "|----------------------|-----------|--------|---------|---------------------|----------|----------|-----------------------|\n",
     "| 360                  | 360x360   | 3.24   | 129600  | $1399.7 \\cdot 10^6$ | C30/37   | 20       | $27.5 \\cdot 10^3$ |\n",
+    "```\n",
     "\n",
     "For the modulus of elasticity, we must use the design value $\\mathsf{E_{c,d}}$ according to the standard.\n",
     "\n",
