--- a/book/calculation_examples/steel/cantilever_beam.ipynb
+++ b/book/calculation_examples/steel/cantilever_beam.ipynb
@@ -68,12 +68,15 @@
     "\n",
     "For the calculations, we need the following formulas for force effects (with the corresponding number on the formula sheet in brackets):\n",
     "\n",
+    "```{table} Formulas for force effects.\n",
+    ":name: force-effect-formulas\n",
     "| **Formula Number** |                                            |                                      |                                |\n",
     "|--------------------|------------------------------------------------------|-----------------------------------------------------|------------------------------------------------------|\n",
     "| **[A1]**           | $M_{veld}=\\frac{1}{8} \\cdot q_d l^2_{ov}$            | $w_{veld}= \\frac{5}{384} \\cdot \\dfrac{q l^4_{ov}}{EI}$ | $\\varphi=\\frac{1}{24}\\cdot \\dfrac{q l^4_{ov}}{EI}$    |\n",
     "| **[B3]**           | $M_{st.punt}=\\frac{1}{2} \\cdot q_d l_{uit}^2$        | $w_{uit 1}=\\frac{1}{8} \\cdot \\dfrac{q l^4_{ov}}{EI}$ |                                                      |\n",
     "| **[C1]**           | $\\varphi=\\frac{1}{3} \\cdot \\dfrac{Kl_{ov}}{EI}$      | $K=\\frac{1}{2} \\cdot ql_{uit}^2$               | $w_{uit 2}=l_{uit} \\cdot \\varphi$                |\n",
-    " \n",
+    "```` \n",
+    "\n",
     "The load on beam section A-B will cause the cantilever to move upwards. The rise of endpoint D is given by:\n",
     "\n",
     "$$\n",
@@ -200,10 +203,13 @@
     "Partial factors for Ultimate Limit State of Cantilevered Beam (Safety Class 2)\n",
     "Load Case 1: Variable load only on beam section A-B \n",
     "\n",
+    "```{table} Partial factors for ULS of cantilevered beam.\n",
+    ":name: partial-factors-uls\n",
     "| For beam section A-B | Unfavorable | For cantilever B-D | Favorable |\n",
     "|---|---|---|---|\n",
     "| Partial factor $\\gamma_G$ for $G_{field}$ | 1.2 | $\\gamma_G$ for $G_{cant}$ | 0.9 |\n",
     "| Partial factor $\\gamma_Q$ for $Q_{field}$ | 1.5 | $\\gamma_Q$ for $Q_{cant}$ | 0 |\n",
+    "```\n",
     "\n",
     "````{margin}\n",
     "**M-lines**\n",
@@ -287,10 +293,13 @@
     "Partial factors for Ultimate Limit State of Cantilevered Beam (Safety Class 2)\n",
     "Load Case 1: Variable load only on beam section B-D \n",
     "\n",
+    "```{table} Partial factors for ULS of cantilevered beam.\n",
+    ":name: partial-factors-uls\n",
     "| For beam section A-B | Unfavorable | For cantilever B-D | Favorable |\n",
     "|---|---|---|---|\n",
     "| Partial factor $\\gamma_G$ for $G_{field}$ | 1.2 | $\\gamma_G$ for $G_{cant}$ | 0.9 |\n",
     "| Partial factor $\\gamma_Q$ for $Q_{field}$ | 1.5 | $\\gamma_Q$ for $Q_{cant}$ | 0 |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "This load combination results in the largest moment above the support point (B):\n",
