--- a/book/design/concrete/bubbledeck_floors.ipynb
+++ b/book/design/concrete/bubbledeck_floors.ipynb
@@ -65,6 +65,8 @@
     "With a bubbledeckfloor flat plate, floors without beams can be constructed. The self weight, dead load and variable load is transmitted in two directions to the supporting walls\n",
     "and/or columns. The reinforcement modules are available in FeB 500. The polymer spheres are made of HDPE (high density polyethylene).\n",
     "\n",
+    "```{table} Specifications Bubbledeck floors.\n",
+    ":name: bubbledeck-specifications\n",
     "| Type | Floor Thickness $[mm]$ | Sphere Diameter $[mm]$ | C.T.C. Distance $[mm]$ |\n",
     "|------|-----------------------|-----------------------|-----------------------|\n",
     "| BD   | 230                   | ∅180                  | 200                   |\n",
@@ -72,6 +74,7 @@
     "| BD   | 340                   | ∅270                  | 300                   |\n",
     "| BD   | 390                   | ∅315                  | 350                   |\n",
     "| BD   | 450                   | ∅360                  | 400                   |\n",
+    "```\n",
     "\n",
     "### Prefab elements\n",
     "\n",
@@ -102,6 +105,8 @@
    "source": [
     "## Spans\n",
     "\n",
+    "```{table} Bubbledeck span lengths.\n",
+    ":name: bubbledeck-spans\n",
     "| Type | Floor Thickness $[mm]$ | Sphere Diameter $[mm]$ | C.T.C. Distance $[mm]$ | Mass (full sphere pattern) $[kg/m2]$ element Width 3.000 $[mm]$ | Mass (full sphere pattern) $[kg/m2]$ element Width 2.400 $[mm]$ | Span $[m]$ |\n",
     "|------|-----------------------|-----------------------|-----------------------|---------------------------------------------------------------|---------------------------------------------------------------|---------|\n",
     "| BD   | 230                   | ∅180                  | 200                   | 380                                                           | 390                                                           | 6 - 7   |\n",
@@ -109,6 +114,7 @@
     "| BD   | 340                   | ∅270                  | 300                   | 550                                                           | 580                                                           | 8 - 9   |\n",
     "| BD   | 390                   | ∅315                  | 350                   | 650                                                           | 660                                                           | 10 - 11 |\n",
     "| BD   | 450                   | ∅360                  | 400                   | 740                                                           | 720                                                           | 12 - 14 |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "The span is indicated for variable loads of $2.5  kN/m^2$ to $4,0  kN/m^2$\n",
