--- a/book/design/concrete/composite_floors.ipynb
+++ b/book/design/concrete/composite_floors.ipynb
@@ -70,6 +70,8 @@
     "HODY SB60 composite floor example.\n",
     "```  \n",
     "\n",
+    "```{table} Product specifications for HODY SB60 floor.\n",
+    ":name: product-specification-hody-sb60\n",
     "| Plate Reinforcement       |                                                               |\n",
     "|---------------------------|---------------------------------------------------------------|\n",
     "| Plate thickness  (including zinc)             | 0.75 $[mm]$ / 0.88 $[mm]$ / 1.00 $[mm]$                                  |\n",
@@ -79,11 +81,15 @@
     "| Concrete Total width      | 1086 $[mm]$                                                       |\n",
     "| Effective width           | 1010 $[mm]$                                                       |\n",
     "| Length                    | Any length possible                                           |\n",
+    "```\n",
     "\n",
+    "```{table} Product specifications for HODY SB60 floor.\n",
+    ":name: material-properties-hody-sb60\n",
     "| Material properties         |                                                               |\n",
     "|---------------------------  |---------------------------------------------------------------|\n",
     "| Characteristic yield stress | Minimal 320 $[N/mm^2]$                                           |\n",
     "| Ultimate strain             | Minimal 17%                                                   |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "Based on: C28/35. Other strength classes can be applied except for lightweight concrete.\n",
@@ -92,7 +98,8 @@
     "## Spans\n",
     "\n",
     "### Offices and lodging\n",
-    "\n",
+    "```{table} Offices and lodging floors, specifications.\n",
+    ":name: offices-and-lodges-floors-specifications\n",
     "| Span $[mm]$ | Number of Props | Thickness $[mm]$ | Type of Top Reinforcement (for Continuous Floors)          |\n",
     "|-----------|------------------|----------------|-----------------------------------------------------------|\n",
     "| 1.500     | 0                | 110            | Reinforcement Net: 7-150                                  |\n",
@@ -106,6 +113,7 @@
     "| 5.500     | 3                | 220            | Reinforcement Net: 8-150 + 8 - 300                        |\n",
     "| 6.000     | 4                | 230            | Reinforcement Net: 8-150 + 8 - 300                        |\n",
     "| 6.500     | 5                | 290            | Reinforcement Net: 8-150 + 8 - 150                        |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "Span table HODY SB60 floor OFFICES and LODGING\n",
@@ -121,7 +129,8 @@
     "```\n",
     "\n",
     "### Residential\n",
-    "\n",
+    "```{table} Residential floors, specifcations.\n",
+    ":name: residential-floors-specifications\n",
     "| Span $[mm]$ | Number of Props | Thickness $[mm]$ | Type of Top Reinforcement (for Continuous Floors) |\n",
     "|-----------|------------------|----------------|----------------------------------------------------|\n",
     "| 1.500     | 0                | 110            | Reinforcement Net: 7-150                          |\n",
@@ -135,6 +144,7 @@
     "| 5.500     | 3                | 220            | Reinforcement Net: 8-150 + 8 - 300                |\n",
     "| 6.000     | 4                | 230            | Reinforcement Net: 8-150 + 8 - 300                |\n",
     "| 6.500     | 5                | 290            | Reinforcement Net: 8-150 + 8 - 150                |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "Span table HODY SB60 floor RESIDENTIAL BUILDINGS\n",
