--- a/book/design/concrete/precast_concrete_planks.ipynb
+++ b/book/design/concrete/precast_concrete_planks.ipynb
@@ -31,6 +31,8 @@
     "\n",
     "## Product specifications Dycore precast concrete planks\n",
     "\n",
+    "```{table} Product specifications for Dycpre precast concrete planks\n",
+    ":name: dycore-precast-concrete-planks-specifications\n",
     "| Property                     | Value                                          |\n",
     "|------------------------------|------------------------------------------------|\n",
     "| Element Length               | 0.25 - 10 m                                    |\n",
@@ -42,6 +44,7 @@
     "|                       | - 60 mm / 1.44 kN/m²                                     |\n",
     "|                       | - 70 mm / 1.68 kN/m²                                     |\n",
     "|                       | - 80 mm / 1.92 kN/m²                                     |\n",
+    "```\n",
     "\n",
     "```{figure} Images/Dycore_Precast.jpg\n",
     "Precast slabs dimensions (Dycore).\n",
