--- a/book/design/foundations/foundation_methods_1.ipynb
+++ b/book/design/foundations/foundation_methods_1.ipynb
@@ -22,9 +22,12 @@
     "been shown in practice that using a soil improvement reaching below the ground water table tends to be more expensive than a pile foundation. This can already be the case with soil soil improvement improvements to a depth of 1 m.\n",
     "\n",
     "## Slab foundation\n",
+    "```{table} Slab foundation design choices.\n",
+    ":name: slab-foundation-design\n",
     "| Application | Appearance | Depth norm/max. [m] | Diameter ø [mm] | Indication of bearing capacity |\n",
     "|-------------|------------|---------------------|------------------------|--------------------------------|\n",
     "| Light structures, depending on soil condition, e.g. low rise housing on sandy soil. | strip- or slab foundation, masonry foundation | n.a. | n.a. | depending on soil conditions: 50-2500 kN/m² |\n",
+    "```\n",
     "\n",
     "### Explanation\n",
     "A slab foundation must always reach to a frost-free depth. In practice this means a depth of at least 0,8 m below ground level.\n"
