--- a/book/design_workflow/general_drawing/line_types_and_hatching.ipynb
+++ b/book/design_workflow/general_drawing/line_types_and_hatching.ipynb
@@ -5,13 +5,16 @@
    "metadata": {},
    "source": [
     "# Line types \n",
+    "\n",
+    "```{table} Line types for drawing.\n",
+    ":name: line-types-for-drawing\n",
     "| Line Type                                          | Description          |\n",
     "|----------------------------------------------------|----------------------|\n",
     "| <img src=\"Images/LijnsoortenVDM_Tekengebied_1.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"200px\"> | Continuous Line      |\n",
     "| <img src=\"Images/LijnsoortenVDM_Tekengebied_2.png\" alt=\"Dashed lijn\" class=\"bg-primary\" width=\"200px\"> | Dashed Line          |\n",
     "| <img src=\"Images/LijnsoortenVDM_Tekengebied_3.png\" alt=\"Mixed lijn\" class=\"bg-primary\" width=\"200px\"> | Mixed Dashed Line    |\n",
     "| <img src=\"Images/LijnsoortenVDM_Tekengebied_4.png\" alt=\"Dotted lijn\" class=\"bg-primary\" width=\"200px\"> | Dotted Line          |\n",
-    "\n",
+    "```\n",
     "\n",
     "# Cross section indications\n",
     "\n",
@@ -42,6 +45,8 @@
     "\n",
     "## Stone-like materials\n",
     "\n",
+    "```{table} Drawing of stone-like materials.\n",
+    ":name: stone-like-materials-in-drawing\n",
     "| No. | Description                           | Hatch                                           | Scale        |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------               | -----                                           | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                                       |                                                 | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
@@ -60,7 +65,8 @@
     "| 8   | Decorative concrete                   | <img src=\"Images/Decorative_Concrete.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">    | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "| 9   | Natural stone                         | <img src=\"Images/Natural_Stone.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">  | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)|       |                          |\n",
     "| 10  | Single floor/wall finishing           | <img src=\"Images/Single_Floor_Wall.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">    |       |       |      |        | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)    | e.g. plaster     |\n",
-    "| 11  | Composite floor/wall finishing        | <img src=\"Images/Composite.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">              |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)    |                          |\n"
+    "| 11  | Composite floor/wall finishing        | <img src=\"Images/Composite.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">              |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)    |                          |\n",
+    "```"
    ]
   },
   {
@@ -74,6 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Drawing of timber materials.\n",
+    ":name: drawing-stone-like-materials\n",
     "|No.| Description                        | Hatch                                | Scale        |              |              |              |              |              |Remarks       |\n",
     "|---| -----------------------            | -----                                | -----        | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|   |                                    |                                      | 1:100        |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
@@ -82,7 +90,8 @@
     "|14 | Softwood/Hardwood (along the grain)| <img src=\"Images/Soft_Hardwood_Along_The_Grain.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">      |       |       |      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "|15 | Glued seam                         | <img src=\"Images/Glued_Seam.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">       |       |       |      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "|16 | Cladding panel                     | <img src=\"Images/Cladding_Panel.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">     |             |  |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                         |\n",
-    "|17 | Isolation panel                    | <img src=\"Images/Isolation_Panel.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">   |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)  | <img src=\"Images/degrees_60.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |"
+    "|17 | Isolation panel                    | <img src=\"Images/Isolation_Panel.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">   |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)  | <img src=\"Images/degrees_60.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |\n",
+    "```"
    ]
   },
   {
@@ -96,6 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Drawing of metal materials.\n",
+    ":name: drawing-metal-materials\n",
     "| No. | Description                   | Hatch                           | Scale |              |              |              |              |              |Remarks       |\n",
     "| --- | -----------------------       | -----                           | ----- | -----        | ----         | ----         | ----         | ----         | ---          |\n",
     "|     |                               |                                 | 1:100 |1:50          |1:20          |1:10          |1:5           |1:1           |              | \n",
@@ -103,7 +114,8 @@
     "| 18  |                         | <img src=\"Images/Steel2.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |  | | | | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "| 19  | Aluminium, brass, copper etc. | <img src=\"Images/Aluminium.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |\n",
     "| 20  | Lead                          | <img src=\"Images/Lead.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png)| mention density |\n",
-    "| 21  | Zinc                          | <img src=\"Images/Zinc.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | mension material number |"
+    "| 21  | Zinc                          | <img src=\"Images/Zinc.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\"> |       |       | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | mension material number |\n",
+    "```"
    ]
   },
   {
@@ -117,6 +129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Drawing of miscellaneous materials.\n",
+    ":name: drawing-miscellaneous-materials\n",
     "| No. | Description    | Hatch                                 | Scale |       |      |              |              |              |Remarks       |\n",
     "| --- | -------------- | -----                                 | ----- | ----- | ---- | ----         | ----         | ----         | ---          |\n",
     "|     |                |                                       | 1:100 |1:50   |1:20  |1:10          |1:5           |1:1           |              | \n",
@@ -127,7 +141,8 @@
     "| 26  | Sand           | <img src=\"Images/Sand.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">         | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png)|                          |\n",
     "| 27  | Gravel         | <img src=\"Images/Gravel.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">      | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
     "| 28  | Water          | <img src=\"Images/Water.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">     | ![black_circle](Images/black_circle.png) |  ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) | ![black_circle](Images/black_circle.png) |                          |\n",
-    "| 29  | Glass          | <img src=\"Images/Glass.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">     |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |"
+    "| 29  | Glass          | <img src=\"Images/Glass.png\" alt=\"Getrokken lijn\" class=\"bg-primary\" width=\"100px\">     |       |       |      | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) | ![grey_circle](Images/grey_circle.png) |                          |\n",
+    "```"
    ]
   },
   {
