--- a/book/design_workflow/general_loads/loads_limit_states.ipynb
+++ b/book/design_workflow/general_loads/loads_limit_states.ipynb
@@ -73,11 +73,14 @@
    "source": [
     "## Ultimate limit state: load factors ($γ$)\n",
     "\n",
+    "```{table} Ultimate limit state, load factors.\n",
+    ":name: ultimate-limit-state-load-factors\n",
     "| Design Situation | Permanent Loads | Variable Loads | Unfavourable | Favourable | Leading | Other |\n",
     "|------------------|-----------------|----------------|--------------|------------|---------|-------|\n",
     "| 1                | 1.35            | 0.9            | -            | 1.5        | -       | -     |\n",
     "| 2                | 1.2             | 0.9            | 1.5          | 1.5        | -       | -     |  \n",
-    "  \n",
+    "```\n",
+    "\n",
     "```{note}\n",
     "A favourable load can for example be the dead load of a roof in combination with uplift forces due to wind.\n",
     "```"
