--- a/book/design_workflow/general_loads/permanent_loads.ipynb
+++ b/book/design_workflow/general_loads/permanent_loads.ipynb
@@ -28,6 +28,9 @@
     "## Materials (structural)\n",
     "\n",
     "### Primary building materials\n",
+    "\n",
+    "```{table} Density of primary building materials.\n",
+    ":name: primary-building-materials-density\n",
     "| Material          | ρ [$kg/m^3$] |\n",
     "|--------------------------|------------------|\n",
     "| **Dunesand**             |                  |\n",
@@ -49,14 +52,20 @@
     "| **Basalt, Granite**      | 2850             |\n",
     "| **Limestone, Marble**    | 2700             |\n",
     "| **Shale**                | 2700             |\n",
+    "```\n",
     "\n",
     "### Secondary building materials\n",
+    "```{table} Density of secondary building materials.\n",
+    ":name: secondery-building-materials-density\n",
     "| Material         | ρ [$kg/m^3$] |\n",
     "|-----------------------|------------------|\n",
     "| Ash                   | 1000             |\n",
     "| Blast Furnace Slag     | 1700             |\n",
+    "```\n",
     "\n",
     "### Masonry\n",
+    "```{table} Density of different types of masonry.\n",
+    ":name: masonry-densities\n",
     "| Material              | ρ [$kg/m^3$] |\n",
     "|---------------------------|------------------|\n",
     "| Clinker Brick             | 2000             |\n",
@@ -66,8 +75,11 @@
     "| - hollow (35%)            | 1100             |\n",
     "| Facing Brick (20%)        | 1800             |\n",
     "| Sand-lime Bricks          | 1850             |\n",
+    "```\n",
     "\n",
     "### Concrete masonry units\n",
+    "```{table} Concrete masonry densities.\n",
+    ":name: concrete-masonry-densities\n",
     "| Material              | ρ [$kg/m^3$] |\n",
     "|---------------------------|------------------|\n",
     "| - light                    | 800-1500         |\n",
@@ -78,8 +90,11 @@
     "| Tiles                      |                  |\n",
     "| - porous                   | 1900             |\n",
     "| - non porous               | 2300             |\n",
+    "```\n",
     "\n",
     "### Concrete\n",
+    "```{table} Concrete densities.\n",
+    ":name: concrete-densities\n",
     "| Material              | ρ [$kg/m^3$] |\n",
     "|---------------------------|------------------|\n",
     "| Lightweight Concrete      | <2000            |\n",
@@ -88,6 +103,7 @@
     "| Reinforced Concrete       | 2400-2550        |\n",
     "| Structural Lightweight Concrete | 1200-2000 |\n",
     "| Foamed Concrete           | 300-1400         |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "The values above are given in [$kg/m^3$], which is not the same as [$kN/m^3$]!\n",
@@ -99,6 +115,8 @@
    "metadata": {},
    "source": [
     "## Materials (all)\n",
+    "```{table} All materials and densities.\n",
+    ":name: all-material-densities.\n",
     "| Material                        | ρ [kg/m³] | Material                     | ρ [kg/m³] |\n",
     "|----------------------------------|-----------|------------------------------|-----------|\n",
     "| Aluminium, cast                  | 2768      | Lead, cast                   | 11328     |\n",
@@ -143,6 +161,7 @@
     "| Granite, dressed                 | 2642      |                              |           |\n",
     "| Granite, rubble                  | 2477      |                              |           |\n",
     "| Gravel                           | 1918      |                              |           |\n",
+    "```\n",
     "\n",
     "```{note}\n",
     "The values above are given in [$kg/m^3$], which is not the same as [$kN/m^3$]!\n",
@@ -155,6 +174,8 @@
    "source": [
     "## Action per unit surface area for composed structures\n",
     "\n",
+    "```{table} Force per unit surface for composed structures.\n",
+    ":name: force-per-unit-for-composed-structures\n",
     "| Material                              | [$kN/m^2$] | Material                                         | [$kN/m^2$] |\n",
     "|--------------------------------------|---------|-------------------------------------------------|---------|\n",
     "| Steel façade elements                | 0.05-0.13 | Polymer foils                                 | 0.02    |\n",
@@ -166,7 +187,8 @@
     "| Bitumenlayers + connectons and purlins | 0.15  |                                                 |         |\n",
     "| Glass fabric 2 layers               | 0.07    | Roof tiles + underlay and purlins             | 0.65    |\n",
     "| Glass fabric 3 layers               | 0.1     | Flat roof + beams and underlay <br> (no gravel)    | 0.36    |\n",
-    "| Shingles                             | 0.07    |                                                 |         |\n"
+    "| Shingles                             | 0.07    |                                                 |         |\n",
+    "```"
    ]
   }
  ],
