--- a/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_1_buildings.ipynb
@@ -24,6 +24,8 @@
    "metadata": {},
    "source": [
     "## Verticle and variable loads on floors and roofs\n",
+    "```{table} Verticle and variable loads on floors and roofs.\n",
+    ":name: verticle-and-variable-loads-for-floors-and-roofs\n",
     "| Category                               | Distributed [$kN/m^2$] | Concentrated [$kN$] | Remarks          |\n",
     "|---------------------------------------|---------------------|-------------------|------------------|\n",
     "| Category A: residential areas         |                     |                   |                  |\n",
@@ -62,7 +64,8 @@
     "| dependend of roof angle              |                     |                   | a               |\n",
     "| - 0 ≤ a ≤ 15                         | 1                   | 1.5               | b,c,f            |\n",
     "| - 15 ≤ a ≤ 20                        | 4 - 0.2a            | 1.5               | b,c,f            |\n",
-    "| - 20 ≤ a                             | 0                   | 1.5               | b,c,f            |\n"
+    "| - 20 ≤ a                             | 0                   | 1.5               | b,c,f            |\n",
+    "```"
    ]
   },
   {
