--- a/book/design_workflow/general_mechanics/mechanic_formulas.ipynb
+++ b/book/design_workflow/general_mechanics/mechanic_formulas.ipynb
@@ -13,10 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Mechanic formulas overview.\n",
+    ":name: mechanic-formulas\n",
     "| | Kinematic relations | Constitutive relations | Static relations | Differential equation |\n",
     "|--------|-------------------------------------|--------------------------------------|-----------------------------------|---------------------------------|\n",
     "| Extension | $\\epsilon = \\frac{du}{dx}$ | $ N = EA \\epsilon $ | $\\frac{dN}{dx} + q_x = 0$ | $EA \\frac{d^2u}{dx^2} + q_x = 0$ |\n",
-    "| Bending | $\\phi = -\\frac{dw}{dx}$;   $\\kappa = \\frac{d\\phi}{dx}$;   $\\kappa=-\\frac{d^2w}{dx^2}$ | $M=EI\\kappa$|$\\frac{dV}{dx}+q_z=0$; $\\frac{dM}{dx}-v=0$; $\\frac{d^2M}{dx^2}+q_z=0$ | $-EI\\frac{d^4w}{dx^4}+q_z=0$|\n"
+    "| Bending | $\\phi = -\\frac{dw}{dx}$;   $\\kappa = \\frac{d\\phi}{dx}$;   $\\kappa=-\\frac{d^2w}{dx^2}$ | $M=EI\\kappa$|$\\frac{dV}{dx}+q_z=0$; $\\frac{dM}{dx}-v=0$; $\\frac{d^2M}{dx^2}+q_z=0$ | $-EI\\frac{d^4w}{dx^4}+q_z=0$|\n",
+    "```"
    ]
   },
   {
