--- a/book/design_workflow/general_mechanics/symbols.ipynb
+++ b/book/design_workflow/general_mechanics/symbols.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Overviw of symbols and units.\n",
+    ":name: symbol-overview\n",
     "| Symbol    | Name                                | Symbol | \n",
     "|--------   |-------------------------------------|--------| \n",
     "| $q_y$     | Distributed load in y direction    | $[N/m]$    | \n",
@@ -38,7 +40,8 @@
     "| $γ_Q$     | Load factor for variable loads     | $[-]$      | \n",
     "| $θ$       | Angle of rotation                   | $[rad]$    | \n",
     "| $σ$       | Normal stress                       | $[N/m^2]$  | \n",
-    "| $τ$       | Shear stress                        | $[N/m^2]$  | \n"
+    "| $τ$       | Shear stress                        | $[N/m^2]$  | \n",
+    "```"
    ]
   },
   {
