--- a/book/basics/steel/products_3_welded_sections.ipynb
+++ b/book/basics/steel/products_3_welded_sections.ipynb
@@ -13,11 +13,14 @@
     "Non-residential buidlings. Castellated beams can be built by cutting a H or I section in one cut without loss of material. Round holes are also possible, but are less economical due to material losses and extra cutting.\n",
     "```\n",
     "\n",
+    "```{table} Dimensions of castellated beams.\n",
+    ":name: dimensions-castellated-beams\n",
     "| Type | Size        | $h$ (mm)      | $b$ (mm)      |\n",
     "|------|-------------|-------------|-------------|\n",
     "| IPE  | 180 - 600   | 270 - 900   | 91 - 220    |\n",
     "| HEA  | 180 - 1000  | 257 - 1485  | 180 - 300   |\n",
     "| HEB  | 180 - 1000  | 270 - 1500  | 180 - 300   |\n",
+    "```\n",
     "\n",
     "Applications: Large, light spans with possibilities to incorporate building services in the structural height. Strength increases only slightly. Stiffness of the sections \n",
     "increases despite the increased shear deformations. Castellated beams are very sensitive to lateral torsion buckling and have reduced shear capacity.\n",
