--- a/book/calculation_examples/steel/column.ipynb
+++ b/book/calculation_examples/steel/column.ipynb
@@ -48,12 +48,14 @@
     "\n",
     "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
     "\n",
+    "```{table} Overview of different loads.\n",
+    ":name: different-loads-overview\n",
     "|                    | Opgelegde belasting | Opgelegde belasting | Rustende belasting | Rustende belasting | Gewicht ligger  | Gewicht ligger |\n",
     "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|\n",
     "|                    | vloer               | dak                 | vloer              | dak                | vloer           | dak            |\n",
     "|                    | [kN/m^2]            | [kN/m^2]            | [kN/m^2]           | [kN/m^2]           | [kN/m]          | [kN/m]         |\n",
     "|   staalskelet      | 3                   | 1                   | 4.9                | 4.9                | 0.88            | 0.88           |\n",
-    "\n",
+    "```\n",
     "\n",
     "````{margin}\n",
     "**Estimation of structural dimensions, global sizing**\n",
