--- a/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
+++ b/book/design_workflow/general_loads/variable_loads_2_wind.ipynb
@@ -118,12 +118,15 @@
     "zones apply. The value h should then be taken as the height of the roof-ridge\n",
     "above ground level.\n",
     "\n",
+    "```{table} Windzones for façades and corresponding $c_f$ value.\n",
+    ":name: facade-windzones\n",
     "|Façades         |  |          |          |          |          |\n",
     "|---------|---------|----------|----------|----------|----------|\n",
     "|         |   A     |    B     |    C     |    D     |    E     |\n",
     "| h/d = 5 |   -1.2  |   -0.8   |   -0.5   |   +0.8   |   -0.7   |\n",
     "| h/d = 1 |   -1.2  |   -0.8   |   -0.5   |   +0.8   |   -0.5   |\n",
     "| h/d ≤ 0.25 | -1.2  |   -0.8   |   -0.5   |   +0.7   |   -0.3   |\n",
+    "```\n",
     "\n",
     "```{figure} Images/Windzones1.png\n",
     "---\n",
@@ -151,9 +154,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Windzones for flat roofs and corresponding $c_f$ value.\n",
+    ":name: windzones-for-flat-roofs\n",
     "| Type        | F     | G     | H     | I        |\n",
     "|-------------|-------|-------|-------|----------|\n",
     "| Sharp eaves | -1.8  | -1.2  | -0.7  | +0.2/-0.2|\n",
+    "```\n",
     "\n",
     "```{figure} Images/Windzones_Roofs1.png\n",
     "---\n",
@@ -187,7 +193,9 @@
     "---\n",
     "Duopitch roofs, ridge parallel to ($\\theta = 90$).\n",
     "```\n",
-    "  \n",
+    "\n",
+    "```{table} Dupitch roofs, where $theta = 0$, and its corresponding $c_f$ value.\n",
+    ":name: windzones-for-duopitch-roofs-theta0\n",
     "| Roof Angle (α) |    F    |    G    |    H    |    I    |    J    |\n",
     "|----------------|---------|---------|---------|---------|---------|\n",
     "|       5º       |  -1.7   |  -1.2   |  -0.6   |  -0.6   |  +0.2   |\n",
@@ -199,13 +207,16 @@
     "|      45º       |   0.0   |   0.0   |   0.0   |  -0.2   |  -0.3   |\n",
     "|                |  +0.7   |  +0.7   |  +0.6   |  +0.0   |  +0.0   |\n",
     "|      60º       |  +0.7   |  +0.7   |  +0.7   |  -0.2   |  -0.3   |\n",
-    "|      75º       |  +0.8   |  +0.8   |  +0.8   |  -0.2   |  -0.3   |\n"
+    "|      75º       |  +0.8   |  +0.8   |  +0.8   |  -0.2   |  -0.3   |\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{table} Dupitch roofs, where $theta = 90$, and its corresponding $c_f$ value.\n",
+    ":name: windzones-for-duopitch-roofs-theta90\n",
     "| Roof Angle (α) |    F    |    G    |    H    |    I    |\n",
     "|----------------|---------|---------|---------|---------|\n",
     "|       5º       |  -1.6   |  -2.2   |  -0.7   |  -0.6   |\n",
@@ -213,7 +224,8 @@
     "|      30º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |\n",
     "|      45º       |  -1.1   |  -1.5   |  -0.9   |  -0.5   |\n",
     "|      60º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |\n",
-    "|      75º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |"
+    "|      75º       |  -1.1   |  -1.5   |  -0.8   |  -0.5   |\n",
+    "```"
    ]
   },
   {
@@ -264,6 +276,8 @@
     "Wind zones on canopies for different blockages under the canopy.\n",
     "```\n",
     "\n",
+    "```{table} Windzones for canopies with different blockages.\n",
+    ":name: windzones-canopies-different-blockages\n",
     "| Roof Angle (α) | Blockage Factor (φ) | Overall Force cf |    A    |    B    |    C    |\n",
     "|----------------|----------------------|------------------|---------|---------|---------|\n",
     "|       0º       | Maximum all φ       |      +0.2        |   +0.5  |   +1.8  |   +1.1  |\n",
@@ -286,7 +300,8 @@
     "|                | Minimum φ=1         |      -1.4        |   -1.5  |   -2.5  |   -2.8  |\n",
     "|      30º       | Maximum all φ       |      +1.2        |   +2.2  |   +3.2  |   +2.4  |\n",
     "|                | Minimum φ=0         |      -1.8        |   -3.0  |   -3.8  |   -3.6  |\n",
-    "|                | Minimum φ=1         |      -1.4        |   -1.5  |   -2.2  |   -2.7  |\n"
+    "|                | Minimum φ=1         |      -1.4        |   -1.5  |   -2.2  |   -2.7  |\n",
+    "```"
    ]
   },
   {
@@ -306,12 +321,15 @@
     "may be assumed that this force acts along all faces parallel to the wind\n",
     "direction. According NEN-EN-1991-1-4 this area can be reduced dependent\n",
     "on geometry.\n",
-    "  \n",
+    "\n",
+    "```{table} Friction coefficient for different surfaces.\n",
+    ":name: friction-coefficients-canopies\n",
     "| Surface                              | Friction Coefficient ($c_{fr}$) |\n",
     "|--------------------------------------|----------------------------|\n",
     "| Smooth (e.g.: smooth concrete, steel)|            0.01            |\n",
     "| Rough (e.g.: rough concrete, tar-boards)|           0.02            |\n",
-    "| Very rough (e.g.: ripples, folds, ribs)|          0.04            |\n"
+    "| Very rough (e.g.: ripples, folds, ribs)|          0.04            |\n",
+    "```"
    ]
   },
   {
@@ -353,7 +371,9 @@
    "metadata": {},
    "source": [
     "## Peak velocity pressure\n",
-    "|   | Coastal Area I | Rural Area I | Urban Area I | Coastal Area II | Rural Area II | Urban Area II | Coastal Area III | Rural Area III | Urban Area III |\n",
+    "```{table} Peak velocity pressures $q_p(z_e) [kN/m^2]$.\n",
+    ":name: peak-velocity-pressure\n",
+    "|$z_e$ [m]| Coastal Area I | Rural Area I | Urban Area I | Coastal Area II | Rural Area II | Urban Area II | Coastal Area III | Rural Area III | Urban Area III |\n",
     "|---|----------------|--------------|--------------|----------------|---------------|---------------|-----------------|----------------|----------------|\n",
     "| 1 | 0.93           | 0.71         | 0.69         | 0.78           | 0.60          | 0.58          | 0.49            | 0.48           | 0.48           |\n",
     "| 2 | 1.11           | 0.71         | 0.69         | 0.93           | 0.60          | 0.58          | 0.49            | 0.48           | 0.48           |\n",
@@ -393,7 +413,7 @@
     "|180| 2.61           | 2.24         | 2.06         | 2.19           | 1.88          | 1.72          | 1.54            | 1.42           | 1.42           |\n",
     "|190| 2.63           | 2.27         | 2.08         | 2.20           | 1.90          | 1.75          | 1.56            | 1.44           | 1.44           |\n",
     "|200| 2.65           | 2.29         | 2.11         | 2.22           | 1.92          | 1.77          | 1.58            | 1.46           | 1.46           |\n",
-    "\n"
+    "```\n"
    ]
   }
  ],
