--- a/book/design_workflow/general_mechanics/cross_sectional_quantities.ipynb
+++ b/book/design_workflow/general_mechanics/cross_sectional_quantities.ipynb
@@ -12,11 +12,15 @@
    "metadata": {},
    "source": [
     "## Definition section parameters\n",
+    "\n",
+    "```{table} Section parameters.\n",
+    ":name: section-parameters\n",
     "| Surface      |Static moment of area| Moment of Inertia            | Polar moment of inertia                 | Steiner's rule |\n",
     "|--------------|---------------------|------------------------------|-----------------------------------------|----------------|\n",
     "|$A=\\int_A\\,dA$|$S_y = \\int_A y\\, dA$|$I_{yy}=I_z=\\int_A y^2\\,dA$   |$I_p = \\int_A r^2\\, dA = I_{yy} + I_{zz}$|$I_{\\overline{yy}}=I_{yy(own)}+\\bar{y}_c^2 \\cdot A$|  \n",
     "|              |$S_z = \\int_A z\\, dA$|$I_{yz}=I_{zy}=\\int_A y*z\\,dA$|                                         |$I_{\\overline{yz}}=I_{\\overline{zy}}=I_{yz(own)}+\\bar{y}_c \\cdot \\bar{z}_c \\ A$|\n",
-    "|              |                     |$I_{zz}=I_{y}=\\int_A z^2\\,dA$ |                                         |$I_{\\overline{zz}}=I_{zz(own)}+\\bar{z}_c^2 \\cdot A$"
+    "|              |                     |$I_{zz}=I_{y}=\\int_A z^2\\,dA$ |                                         |$I_{\\overline{zz}}=I_{zz(own)}+\\bar{z}_c^2 \\cdot A$|\n",
+    "```"
    ]
   },
   {
@@ -33,11 +37,14 @@
     "Cross-section of a rectangular shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for square cross-sections.\n",
+    ":name: section-parameters-square\n",
     "|Area, centre of gravity| Moments of intertia own | other                       |\n",
     "|-----------------------|-------------------------|-----------------------------|\n",
     "|$A=bh$                 |$I_{yy}=\\frac{1}{12}*b^3*h$      |$I_{\\overline{yy}}=1/3b^3h$  | \n",
     "|$\\bar{y}_C=\\frac{1}{2}b$         |$I_{zz}=\\frac{1}{12}bh^3$        |$I_{\\overline{zz}}=\\frac{1}{3}bh^3$  |\n",
     "|$\\bar{z}_C=\\frac{1}{2}b$         |$I_{yz}=\\frac{1}{12}bh^3$        |$I_{\\overline{yz}}=\\frac{1}{4}b^2h^2$|\n",
+    "```\n",
     "\n",
     "### Parallelogram\n",
     "```{figure} Images/Parallelogram_Shape.jpg\n",
@@ -47,12 +54,14 @@
     "Cross-section of a parallelogram shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for parallelogram cross-sections.\n",
+    ":name: section-parameters-parallelogram\n",
     "|Area, centre of gravity    | Moments of intertia own       | other                         |\n",
     "|---------------------------|-------------------------------|-------------------------------|\n",
     "|$A=bh$                     |$I_{yy}=\\frac{1}{12}(a^2+b^2)$|$I_{\\overline{yy}}=1/3bh^3$  | \n",
     "|$\\bar{y}_C=\\frac{1}{2}(a+b)$ |$I_{zz}=\\frac{1}{12}bh^3$      |                               |\n",
     "|$\\bar{z_C}=\\frac{1}{2}h$     |$I_{yz}=\\frac{1}{12}abh^2$   |                               |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Triangle\n",
     "```{figure} Images/Triangle_Shape.jpg\n",
@@ -62,11 +71,14 @@
     "Cross-section of a triangle shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for triangle cross-sections.\n",
+    ":name: section-parameters-triangle\n",
     "|Area, centre of gravity       | Moments of intertia own          | other                           |\n",
     "|------------------------------|----------------------------------|---------------------------------|\n",
     "|$A=\\frac{1}{2}bh$             |$I_{yy}=\\frac{1}{36}*(a^2-ab+b^2)$|$I_{\\overline{zz}}=\\frac{1}{3}bh^3$      | \n",
     "|$\\bar{y}_C=\\frac{1}{3}(2a-b)$ |$I_{zz}=\\frac{1}{36}bh^3$         |$I_{\\overline{yz}}=\\frac{1}{8}(2a-b)bh^2$|\n",
     "|$\\bar{z}_C=\\frac{2}{3}h$      |$I_{yz}=\\frac{1}{72}abh^2$        |$I_{\\overline{\\overline{zz}}}=\\frac{1}{12}bh^3$     |\n",
+    "```\n",
     "\n",
     "### Trapezoid\n",
     "```{figure} Images/Trapezoid_Shape.jpg\n",
@@ -76,11 +88,14 @@
     "Cross-section of a trapezoid shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for trapezoid cross-sections.\n",
+    ":name: section-parameters-trapezoid\n",
     "|Area, centre of gravity                  | Moments of intertia own                       | other                                              | \n",
     "|-----------------------------------------|-----------------------------------------------|----------------------------------------------------|\n",
     "|$A=\\frac{1}{2}(a+b)h$                    |$I_{zz}=\\frac{1}{36}\\frac{a^2+4ab+b^2}{a+b}h^3$|$I_{\\overline{zz}}=\\frac{1}{3}bh^3$                 | \n",
     "|$\\bar{y}_C=\\frac{1}{3}\\frac{a+2b}{a+b}h$ |                                               |$I_{\\overline{\\overline{zz}}}=\\frac{1}{12}(a+3b)h^3$|\n",
     "|$\\bar{z}_C=\\frac{2}{3}h$                 |                                               |                                                    |\n",
+    "```\n",
     "\n",
     "### Circle\n",
     "```{figure} Images/Circle_Shape.jpg\n",
@@ -90,11 +105,14 @@
     "Cross-section of a circle shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for circle cross-sections.\n",
+    ":name: section-parameters-circle\n",
     "|Area, centre of gravity | Moments of intertia own      | other                                               | \n",
     "|------------------------|------------------------------|-----------------------------------------------------|\n",
     "|$A=πR^2$                |$I_{yy}=I_{zz}=\\frac{1}{4}R^4$|$I_{\\overline{yy}}=I_{\\overline{zz}}=\\frac{5}{4}πR^4$| \n",
     "|                        |$I_{yz}=0$                    |$I_{\\overline{\\overline{yz}}}=πR^4$                  |\n",
     "|                        |$I_p=\\frac{1}{2}πR^4$         |                                                     |\n",
+    "```\n",
     "\n",
     "### Thick-walled ring\n",
     "```{figure} Images/Thick_Walled_Ring_Shape.jpg\n",
@@ -104,12 +122,14 @@
     "Cross-section of a thick walled ring.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for thick-walled ring cross-sections.\n",
+    ":name: section-parameters-ring-thick\n",
     "|Area, centre of gravity | Moments of intertia own                 | other           | \n",
     "|------------------------|-----------------------------------------|-----------------|\n",
     "|$A=πR_0^2R_i^2$         |$I_{yy}=I_{zz}=\\frac{1}{4}π(R_0^4-R_i^4)$|                 | \n",
     "|                        |$I_{yz}=0$                               |                 |\n",
     "|                        |$I_p=\\frac{1}{2}π(R_0^4-R_i^4)$          |                 |\n",
-    "\n",
+    "```\n",
     "\n",
     "### Thin-walled ring\n",
     "```{figure} Images/Thin_Walled_Ring_Shape.jpg\n",
@@ -119,11 +139,14 @@
     "Cross-section of thin walled ring shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for thick-walled ring cross-sections.\n",
+    ":name: section-parameters-thin\n",
     "|Area, centre of gravity | Moments of intertia own      | other                                      | \n",
     "|------------------------|------------------------------|--------------------------------------------|\n",
     "|$A=2πRt$                |$I_{yy}=I_{zz}=πR^3t$         |$I_{\\overline{yy}}=I_{\\overline{zz}}=3πR^3t$| \n",
     "|                        |$I_{yz}=0$                    |                                            |\n",
     "|                        |$I_p=\\frac{1}{2}πR^3t$        |                                            |\n",
+    "```\n",
     "\n",
     "### Half circle\n",
     "```{figure} Images/Half_Circle_Shape.jpg\n",
@@ -133,11 +156,14 @@
     "Cross-section of a half circle shape.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for half-circle cross-sections.\n",
+    ":name: section-parameters-half-circle\n",
     "|Area, centre of gravity   | Moments of intertia own              | other                                               | \n",
     "|--------------------------|--------------------------------------|-----------------------------------------------------|\n",
     "|$A=\\frac{1}{2}πR^2$       |$I_{yy}=\\frac{1}{8}πR^4$              |$I_{\\overline{yy}}=I_{\\overline{zz}}=\\frac{1}{8}πR^4$| \n",
     "|$\\bar{y}_C=0$             |$I_{zz}=(\\frac{π}{8}-\\frac{8}{9π})R^4$|$I_{\\overline{\\overline{yz}}}=0$                     |\n",
     "|$\\bar{z}_C=\\frac{4}{3π}R$ |$I_{yz}=0$                            |                                                     |\n",
+    "``` \n",
     "\n",
     "### Half thin-walled ring\n",
     "```{figure} Images/Half_Thin_Walled_Ring_Shape.jpg\n",
@@ -147,13 +173,14 @@
     "Cross-sectoin of half thin-walled ring.\n",
     "```\n",
     "\n",
+    "```{table} Section parameters for half thin-walled ring.\n",
+    ":name: section-parameters-half-thin-walled-ring\n",
     "|Area, centre of gravity | Moments of intertia own       | other                                                | \n",
     "|------------------------|-------------------------------|------------------------------------------------------|\n",
     "|$A=πRt$                 |$I_{yy}=I_{zz}=\\frac{1}{2}R^3t$|$I_{\\overline{yy}}=I_{\\overline{zz}}=\\frac{1}{2}πR^3t$| \n",
     "|$\\bar{y}_C=0$           |$I_{zz}=0$                     |$I_{\\overline{yz}}=0$                                 |\n",
     "|$\\bar{z}_C=0$           |$I_{yz}=0$                     |                                                      |\n",
-    "\n",
-    "\n"
+    "```"
    ]
   },
   {
